--- a/example/index.html
+++ b/example/index.html
@@ -15,33 +15,33 @@
 
 	<!-- ## Required Imports ## -->
 	<!-- jQuery -->
-	<SCRIPT src="../lib/jquery-1.10.2.min.js"></SCRIPT>
-	<SCRIPT src="../lib/jquery.autoresize.js"></SCRIPT>
-	<SCRIPT src="../lib/jquery-touch_punch.js"></SCRIPT>
-	<SCRIPT src="../lib/jquery.contextmenu.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/jquery-1.10.2.min.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/jquery.autoresize.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/jquery-touch_punch.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/jquery.contextmenu.js"></SCRIPT>
 
 	<!-- Shifty is an excellent animation solution for scenarios -->
-	<SCRIPT src="../lib/shifty.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/shifty.js"></SCRIPT>
 
 	<!-- Unfortunately the latest version of raphael didn't fix some bug. In this case I did it and patch the version in the Draw2D. You can't replace the provided raphael version with the common version without lost of functionality. Grep from FREEGROUP to find all patches in the raphael.js file -->
-	<SCRIPT src="../lib/raphael.js"></SCRIPT>
-	<SCRIPT src="../lib/rgbcolor.js"></SCRIPT>
-	<SCRIPT src="../lib/canvg.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/raphael.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/rgbcolor.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/canvg.js"></SCRIPT>
 
 	<!-- Simple JavaScript Inheritance by John Resig -->
-	<SCRIPT src="../lib/Class.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/Class.js"></SCRIPT>
 
 	<!-- This file creates a global JSON object containing two methods: stringify and parse -->
-	<SCRIPT src="../lib/json2.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/json2.js"></SCRIPT>
 
 	<!-- Connection routing -->
-	<SCRIPT src="../lib/pathfinding-browser.min.js"></SCRIPT>
+	<SCRIPT src="../draw2d/lib/pathfinding-browser.min.js"></SCRIPT>
 
 	<SCRIPT src="../draw2d/src/draw2d-all.js"></SCRIPT>
     
-    <SCRIPT src="../lib/jquery.browser.js"></SCRIPT>
-    <SCRIPT src="../lib/jquery-ui-1.8.23.custom.min.js"></SCRIPT>
-    <SCRIPT src="../lib/jquery.layout.js"></SCRIPT>
+    <SCRIPT src="../draw2d/lib/jquery.browser.js"></SCRIPT>
+    <SCRIPT src="../draw2d/lib/jquery-ui-1.8.23.custom.min.js"></SCRIPT>
+    <SCRIPT src="../draw2d/lib/jquery.layout.js"></SCRIPT>
 
     <SCRIPT src="../dbModel/Application.js"></SCRIPT>
 	<SCRIPT src="../dbModel/View.js"></SCRIPT>
